:art: Improve structure / format of the code
Se añade iconos al sidebar

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 Options All -Indexes 
-ErrorDocument 403 /Ausen2/403.php
-ErrorDocument 404 /Ausen2/404.php
+ErrorDocument 403 /403.php
+ErrorDocument 404 /404.php
